@@ -4,6 +4,7 @@
 	* added new ViewHelper to generate any TS object by calling cObjGetSingle()
 	* revert changes of method getResourceId in the abstract community application controller, because the check for a null user is necessary as there's not always a user. for example on the groupProfile application 
 	* fix method isFriendOfCurrentlyLoggedInUser in AccessManager
+	* localize all ajax messages in tx_community_controller_EditGroupApplication
 
 2008-10-20 Ingo Renner  <ingo@typo3.org>
 
